--- a/external-dns/application.yaml
+++ b/external-dns/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: external-dns
-  namespace: external-dns
+  namespace: argocd
   labels:
     name: external-dns
 spec:
@@ -18,11 +18,12 @@ spec:
     server: https://kubernetes.default.svc
     namespace: external-dns
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
     managedNamespaceMetadata:
-      annotations:
+      labels:
         "pod-security.kubernetes.io/warn": baseline
