--- a/cilium/application.yaml
+++ b/cilium/application.yaml
@@ -25,6 +25,6 @@ spec:
       - CreateNamespace=true
       - ServerSideApply=true
     managedNamespaceMetadata:
-      annotations:
+      labels:
         "pod-security.kubernetes.io/enforce": privileged
         "pod-security.kubernetes.io/warn": privileged
