Try losing the nodeports again

--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -98,7 +98,7 @@ cilium:
     # This will let cilium ingress controller route entries without ingress class set
     default: true
     service:
-      allocateLoadBalancerNodePorts: true
+      allocateLoadBalancerNodePorts: false
   gatewayAPI:
     # -- Enable support for Gateway API in cilium
     # This will automatically set enable-envoy-config as well.
