--- a/connect/application.yaml
+++ b/connect/application.yaml
@@ -18,9 +18,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: connect
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
