DirectPV drive config

--- a/directpv/application.yaml
+++ b/directpv/application.yaml
@@ -15,9 +15,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: directpv
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
