auto STS but also enable trust manager for someday

--- a/cert-manager/Chart.yaml
+++ b/cert-manager/Chart.yaml
@@ -17,3 +17,5 @@ dependencies:
   - name: cert-manager
     version: ~1.17
     repository: https://charts.jetstack.io
+  - name: trust-manager
+    repository: https://charts.jetstack.io
