--- a/tales-tenant/application.yaml
+++ b/tales-tenant/application.yaml
@@ -1,22 +1,22 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minio-operator
+  name: tales-tenant
   namespace: argocd
   labels:
-    name: minio-operator
+    name: tales-tenant
 spec:
   project: default
   source:
     repoURL: https://github.com/symmatree/tales.git
     targetRevision: main
-    path: minio-operator
+    path: tales-tenant
     helm:
       valueFiles:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: minio-operator
+    namespace: tales-tenant
   syncPolicy:
     # automated:
     #   prune: true
