--- a/tales-tenant/values.yaml
+++ b/tales-tenant/values.yaml
@@ -26,7 +26,7 @@ tenant:
         name: pool-0
         volumesPerServer: 1
         storageClassName: directpv-min-io
-        size: 2.0Ti
+        size: 1.5T
 
   ingress:
     api:
