--- a/directpv/drives.yaml
+++ b/directpv/drives.yaml
@@ -1,5 +1,18 @@
 version: v1
 nodes:
+  - name: talos-control-1
+    drives:
+      - id: 8:3$/nmtH6r6H27fRQzwOOXjlRqLLdUGlTL01J+5Z5Aoy7M=
+        name: sda3
+        size: 1048576000
+        make: SYNOLOGY Storage (Part 3)
+        fs: xfs
+        select: "no"
+      - id: 8:16$h64xpDVxPUSRWmaz5FLxlB9aEzo99nQHeD05+Ji1xoE=
+        name: sdb
+        size: 1099511627776
+        make: SYNOLOGY Storage
+        select: "yes"
   - name: talos-worker-1
     drives:
       - id: 8:3$GKoH90KUaplfpnP0PxbqSEMckukC67nffhxkEr7zej4=
@@ -8,13 +21,9 @@ nodes:
         make: SYNOLOGY Storage (Part 3)
         fs: xfs
         select: "no"
-      - id: 8:32$Js90+QReS3IC8my7JXg1ncvQusaS2ADNAWOFH09XqEo=
-        name: sdc
-        size: 2199023255552
-        make: SYNOLOGY Storage
-        select: "yes"
-      - id: 8:16$3Y4PH9K2yjNSDsd/gf2+t1N93nK+3trWZPSb8JG9zTI=
+      - id: 8:16$mRBFQyVwJDu1P/XW5mLbsjcRC9b0lmus9JF++dWYL48=
         name: sdb
         size: 1099511627776
         make: SYNOLOGY Storage
-        select: "no"
+        fs: xfs
+        select: "yes"
