--- a/lgtm/Chart.yaml
+++ b/lgtm/Chart.yaml
@@ -10,3 +10,6 @@ dependencies:
   - name: loki
     version: ~6.29
     repository: https://grafana.github.io/helm-charts
+  - name: grafana
+    version: ~8.13
+    repository: https://grafana.github.io/helm-charts
