--- a/lgtm/values.yaml
+++ b/lgtm/values.yaml
@@ -1,3 +1,13 @@
+grafana:
+  # https://github.com/grafana/helm-charts/blob/grafana-8.13.1/charts/grafana/values.yaml
+  configMapAnnotations:
+    argocd.argoproj.io/sync-options: Replace=true
+  ingress:
+    enabled: true
+    ingressClassName: cilium
+    annotations:
+      cert-manager.io/cluster-issuer: real-cert
+
 loki:
   loki:
     global:
