--- a/tales-tenant/values.yaml
+++ b/tales-tenant/values.yaml
@@ -7,25 +7,21 @@ tenant:
       # Populated from onepassword
       name: tales-tenant-secret
       existingSecret: true
-    # certificate:
-    #   ###k desl
-    #   # Specify an array of Kubernetes TLS secrets, where each entry corresponds to a secret the TLS private key and public certificate pair.
-    #   #
-    #   # This is used by MinIO to verify TLS connections from clients using those CAs
-    #   # If you omit this and have clients using TLS certificates minted by an external CA, those connections may fail with warnings around certificate verification.
-    #   # See `Operator CRD: TenantSpec <https://min.io/docs/minio/kubernetes/upstream/reference/operator-crd.html#tenantspec>`__.
-    #   externalCaCertSecret: []
-    #   externalCertSecret:
-    #     - name: tales-tenant-tls
-    #       type: cert-manager.io/v1
 
-    # requestAutoCert: false
+    certificate:
+      externalCaCertSecret:
+        - name: tales-tenant-ca-tls
+          type: cert-manager.io/v1
+      externalCertSecret:
+        - name: tales-tenant-tls
+          type: cert-manager.io/v1
+      requestAutoCert: false
 
     pools:
       - servers: 1
         name: pool-0
         volumesPerServer: 4
-        storageClassName: directpv-min-io
+        storageClassName: directpv-minio-dedicated
         # Provisioning 3x drives @ 549,755,813,880=(2Ti / 4) - 8
         # leaves 548,681,941,016 remaining; this is 1,073,872,872 bytes
         # (about 1G) less than expected.
