--- a/tales-tenant/templates/tenant-ca.yaml
+++ b/tales-tenant/templates/tenant-ca.yaml
@@ -44,6 +44,8 @@ spec:
     - '*.minio.tales-tenant.svc.cluster.local'
     - '*.tales-tenant-hl.tales-tenant.svc.cluster.local'
     - '*.tales-tenant.minio.tales-tenant.svc.cluster.local'
+    - minio.local.symmatree.com
+    - minio-console.local.symmatree.com
   secretName: tales-tenant-tls
   issuerRef:
     name: tales-tenant-ca-issuer
