--- a/tales-tenant/application.yaml
+++ b/tales-tenant/application.yaml
@@ -27,3 +27,4 @@ spec:
     managedNamespaceMetadata:
       labels:
         "pod-security.kubernetes.io/warn": baseline
+        "trust-bundle": enabled
