Rename CA secret, move how-to-trust docs into cert-manager/README

--- a/cert-manager/templates/ca-bundle.yaml
+++ b/cert-manager/templates/ca-bundle.yaml
@@ -6,7 +6,7 @@ spec:
   sources:
   - useDefaultCAs: true
   - secret:
-      name: tales-ca-secret
+      name: tales-ca-tls
       key: "ca.crt"
   target:
     configMap:
