--- a/minio-operator/templates/operator-ca-tls-tales-tenant.yaml
+++ b/minio-operator/templates/operator-ca-tls-tales-tenant.yaml
@@ -1,4 +1,4 @@
-
+# Use trust-manager to inject just the public key of the shared CA, named as minio expects.
 apiVersion: trust.cert-manager.io/v1alpha1
 kind: Bundle
 metadata:
@@ -6,7 +6,7 @@ metadata:
 spec:
   sources:
   - secret:
-      name: tales-ca-secret
+      name: tales-ca-tls
       key: "ca.crt"
   target:
     secret:
