--- a/minio-operator/templates/operator-ca-tls-tales-tenant.yaml
+++ b/minio-operator/templates/operator-ca-tls-tales-tenant.yaml
@@ -13,4 +13,4 @@ spec:
       key: "ca.crt"
     namespaceSelector:
       matchLabels:
-        name: minio-operator
+        "kubernetes.io/metadata.name": minio-operator
