Include .ad subdomain

--- a/cert-manager/templates/lets-encrypt-issuers.yaml
+++ b/cert-manager/templates/lets-encrypt-issuers.yaml
@@ -12,6 +12,7 @@ spec:
     solvers:
       - selector:
           dnsZones:
+            - ad.local.symmatree.com
             - local.symmatree.com
         dns01:
           cloudDNS:
@@ -34,6 +35,7 @@ spec:
     solvers:
       - selector:
           dnsZones:
+            - ad.local.symmatree.com
             - local.symmatree.com
         dns01:
           cloudDNS:
