--- a/lgtm/Chart.yaml
+++ b/lgtm/Chart.yaml
@@ -16,7 +16,6 @@ dependencies:
   - name: mimir-distributed
     repository: "https://grafana.github.io/helm-charts"
     version: ~5.7
-
-  # - name: k8s-monitoring
-  #   version: ~2.0
-  #   repository: https://grafana.github.io/helm-charts
+  - name: k8s-monitoring
+    version: ~2.0
+    repository: https://grafana.github.io/helm-charts
