Shot at destinations for k8s-monitoring

--- a/lgtm/values.yaml
+++ b/lgtm/values.yaml
@@ -158,6 +158,14 @@ loki:
 k8s-monitoring:
   cluster:
     name: tales
+  destinations:
+    - name: localMimir
+      type: prometheus
+      url: http://lgtm-mimir-nginx
+    - name: localLoki
+      type: loki
+      url: http://lgtm-loki-gateway
+
   clusterMetrics:
     enabled: true
   clusterEvents:
