--- a/lgtm/values.yaml
+++ b/lgtm/values.yaml
@@ -183,7 +183,7 @@ k8s-monitoring:
   alloy-logs:
     enabled: true
   alloy-receiver:
-    enabled: true
+    enabled: false
   integrations:
     alloy:
       instances:
