--- a/lgtm/values.yaml
+++ b/lgtm/values.yaml
@@ -166,8 +166,20 @@ k8s-monitoring:
       type: loki
       url: http://lgtm-loki-gateway
 
+  # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
     enabled: true
+    controlPlane:
+      enabled: true
+    kubeProxy:
+      # there isn't one, cilium replaces it.
+      enabled: false
+    windowsExporter:
+      enabled: false
+    kepler:
+      enabled: false
+    opencost:
+      enabled: false
   clusterEvents:
     enabled: true
   nodeLogs:
