Reduce security to allow scraping

--- a/lgtm/application.yaml
+++ b/lgtm/application.yaml
@@ -26,5 +26,6 @@ spec:
       - ServerSideApply=true
     managedNamespaceMetadata:
       labels:
-        "pod-security.kubernetes.io/warn": baseline
+        "pod-security.kubernetes.io/enforce": privileged
+        "pod-security.kubernetes.io/warn": privileged
         "trust-bundle": "enabled"
