--- a/lgtm/values.yaml
+++ b/lgtm/values.yaml
@@ -183,7 +183,8 @@ k8s-monitoring:
   clusterEvents:
     enabled: true
   nodeLogs:
-    enabled: true
+    # Talos doesn't surface these through the filesystem.
+    enabled: false
   podLogs:
     enabled: true
   prometheusOperatorObjects:
@@ -194,6 +195,12 @@ k8s-monitoring:
     enabled: true
   alloy-logs:
     enabled: true
+    alloy:
+      mounts:
+        # /var/log/pods and /var/log/containers exist. (Also audit.)
+        varlog: true
+        dockercontainers: false
+
   alloy-receiver:
     enabled: false
   integrations:
