--- a/lgtm/values.yaml
+++ b/lgtm/values.yaml
@@ -58,6 +58,11 @@ loki:
   loki:
     # Despite name this is actually multi-tenancy support.
     auth_enabled: false
+    test:
+      enabled: false
+    # Cool but very chatty.
+    lokiCanary:
+      enabled: false
     commonConfig:
       replication_factor: 1
     schemaConfig:
@@ -161,10 +166,10 @@ k8s-monitoring:
   destinations:
     - name: localMimir
       type: prometheus
-      url: http://lgtm-mimir-nginx
+      url: http://lgtm-mimir-nginx/api/prom/push
     - name: localLoki
       type: loki
-      url: http://lgtm-loki-gateway
+      url: http://lgtm-loki-gateway/loki/api/v1/push
 
   # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
